# spreadsheet_to_ghidra

./: .gitignore  D2Common.json  D2Common.xlsx  README.md  pyproject.toml
ghidra_scripts/: excel_to_ghidra.py
src/: __main__.py  clean_name.py  deserialize_signature.py  gather_structs.py
