[tool.poetry]
name = "excel_to_ghidra"
version = "0.1.0"
description = "Convert excel workbook to json usable by ghidra script."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
